--- a/client/src/styles/CommentBar.css
+++ b/client/src/styles/CommentBar.css
@@ -22,6 +22,11 @@
   font-family: Montserrat;
   line-height: 20px;
   padding: 0.6em 0.75em;
+  height: auto;
+}
+
+.comment-top textarea {
+  line-height: 20px;
 }
 
 .comment-bar-container textarea::placeholder {
